--- a/templates/desc/Bitmap.html
+++ b/templates/desc/Bitmap.html
@@ -1,1 +1,5 @@
-A simple library to create bmp images with multiple header versions. Aimed to my learning process of image processing.
+<h1>Bitmap library in C</h1>
+<p>
+A simple library to create bmp images with multiple header versions.
+Aimed to my learning process of image processing.
+</p>
