--- a/templates/desc/DjangoSurveyApp.html
+++ b/templates/desc/DjangoSurveyApp.html
@@ -1,3 +1,4 @@
+<h1>Django Surveys</h1>
 <p>
 The app consists of Pollsters, Respondents, Surveys, Questions
 and Answers, as show the entity-relation diagram on the right.
@@ -11,10 +12,13 @@ mess with business logic and queries are handled mostly by models.
 I put a lot of effort into writing idiomatic django code.
 </p>
 <p>
-This is work in progress, what is left is:
+TODO:
 <ul>
-  <li>styling</li>
-  <li>minor permission handling</li>
-  <li>deployment</li>
+  <li>text in views, right now it is hardcoded and some components
+    can be defined on the models definition.</li>
 </ul>
+</p>
+<p>
+This project is part of the digitalization process of a health
+related faculty.
 </p>
