--- a/templates/desc/WaveScattering.html
+++ b/templates/desc/WaveScattering.html
@@ -1,3 +1,4 @@
+<h1>Wave Scattering Through a Ball</h1>
 <p>
 Imagine a planar acoustic wave traveling through the air and
 colliding with a ball fill with water. How does the wave behave
