--- a/templates/desc/YoungTableauxOuterSums.html
+++ b/templates/desc/YoungTableauxOuterSums.html
@@ -1,3 +1,5 @@
+<h1>Which Young tableaux can represent an outer sum?</h1>
+
 <p>
 A Young Tableaux is grid of numbers such that every cell is greater than
 the cell to the right and to the bottom. In this project, I developed and
@@ -5,6 +7,7 @@ implemented an algorithm to massively compute Young Tableaux that can be
 represented by outer sums of vectors based on a LP algorithm developed by
 Colin Mallows and Robert J. Vanderbei.
 </p>
+
 <p>
 This project was developed during
 a winter undergrad research project (roughly a month) at Pontificia
@@ -12,6 +15,7 @@ Universidad Católica de Chile supervised by <a
 href="https://www.mat.uc.cl/~federico.castillo/" target="_blank">Ph.D.
 Federico Castillo Castillo</a>.
 </p>
+
 <p>
 Please refer to the <a
 href="https://github.com/sebastian-sanchez-s/IPI-23-2211">github
