--- a/templates/desc/LogisticRegression.html
+++ b/templates/desc/LogisticRegression.html
@@ -1,6 +1,5 @@
-<p>
-If you are like me, you must hate the "shut up and calculate" mantra.
-</p>
+<h1>Derivation of the Logistic Regression formula</h1>
+
 <p>
 In this document I introduce the categorization problem from data, and in its
 formalization an optimization problem arises that give us very naturally the
