--- a/templates/desc/LogisticRegression.html
+++ b/templates/desc/LogisticRegression.html
@@ -1,4 +1,4 @@
-<h1>Derivation of the Logistic Regression formula</h1>
+<h1>Logistic Regression (Derivation)</h1>
 
 <p>
 In this document I introduce the categorization problem from data, and in its
