--- a/templates/desc/YoungTableauxOuterSums.html
+++ b/templates/desc/YoungTableauxOuterSums.html
@@ -1,4 +1,4 @@
-<h1>Which Young tableaux can represent an outer sum?</h1>
+<h1>Young tableaux as outer sums</h1>
 
 <p>
 A Young Tableaux is grid of numbers such that every cell is greater than
