--- a/templates/desc/MasterThesis.html
+++ b/templates/desc/MasterThesis.html
@@ -1,4 +1,4 @@
-<h1>Approximation Theory for Continuous Operators and its Application to the Operator Learning Problem</h1>
+<h1>Operator Learning (MSc Thesis)</h1>
 <p>
 This is my master's thesis, supervised by <a href="https://federicofuentes.github.io/" target="_blank">Ph.D. Federico Fuentes Caycedo</a>.
 </p>
